[package]
name = "eva-rt-engine"
version = "0.1.0"
edition = "2024"
default-run = "eva-engine-cli"

[dependencies]
eva-rt-common = "0.1.0"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"

[[bin]]
name = "eva-engine-cli"
path = "src/cli-bin/main.rs"

[[bin]]
name = "mpr_fp_gen"
path = "src/bin/mpr_fp_gen.rs"
