[package]
name = "eva-rt-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
eva-rt-common = "0.1.0"
anyhow = "1.0.100"
itertools = "0.14.0"

[dev-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"